--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Github-test-project</title>
     <style>
       body {
-        background: blue;
+        background: red;
       }
       h1 {
         color: white;
+        text-align: center;
       }
     </style>
   </head>
